# ignition-sdk

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
internal/libxinfer_runtime/: CMakeLists.txt
internal/libxinfer_runtime/include/xinfer/: runtime.h
internal/libxinfer_runtime/src/: runtime.cpp
